src/test/ui/issues/issue-11192.stderr
error[E0502]: cannot borrow `*ptr` as immutable because `ptr` is also borrowed as mutable
  --> $DIR/issue-11192.rs:20:11
   |
LL |     let mut test = |foo: &Foo| {
   |                    ----------- mutable borrow occurs here
LL |         println!("access {}", foo.x);
LL |         ptr = box Foo { x: ptr.x + 1 };
   |         --- previous borrow occurs due to use of `ptr` in closure
...
LL |     test(&*ptr);
   |           ^^^^ immutable borrow occurs here
LL |
LL | }
   | - mutable borrow ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
